--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "mongodb": "^3.0.2",
     "mongoose": "^5.0.7",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.4.5"
   }
 }
