--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "test": "node test app.js"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "^2.5.7",
     "express": "~4.16.2",
+    "express-session": "^1.15.6",
     "jade": "~1.11.0",
     "mongodb": "^3.0.2",
     "mongoose": "^5.0.7",
